<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/book_author"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_isbn"
        app:layout_constraintStart_toStartOf="@+id/book_author"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_isbn"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <TextView
        android:id="@+id/book_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_publisher"
        app:layout_constraintStart_toStartOf="@+id/book_isbn"
        app:layout_constraintTop_toBottomOf="@+id/isbn" />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_publisher"
        app:layout_constraintStart_toStartOf="@+id/isbn"
        app:layout_constraintTop_toBottomOf="@+id/isbn" />

    <TextView
        android:id="@+id/book_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_page"
        app:layout_constraintStart_toStartOf="@+id/book_publisher"
        app:layout_constraintTop_toBottomOf="@+id/publisher" />

    <TextView
        android:id="@+id/page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_page"
        app:layout_constraintStart_toStartOf="@+id/publisher"
        app:layout_constraintTop_toBottomOf="@+id/publisher" />

    <TextView
        android:id="@+id/book_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_size"
        app:layout_constraintStart_toStartOf="@+id/book_page"
        app:layout_constraintTop_toBottomOf="@+id/page" />

    <TextView
        android:id="@+id/size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/book_size"
        app:layout_constraintStart_toStartOf="@+id/page"
        app:layout_constraintTop_toBottomOf="@+id/page" />

</androidx.constraintlayout.widget.ConstraintLayout>